# orchestration-gateway-pattern

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_local.py
src/gateway/: __init__.py  app.py  executor.py  metrics.py  provider.py  runtime.py  secrets.py  tracing.py
tests/: test_app.py  test_executor.py  test_provider.py  test_runtime.py  test_secrets.py  test_smoke.py
